@@ -4,19 +4,21 @@ Hash: SHA256
 DIST usbredir-0.4.3.tar.bz2 299163 SHA256 f2cbcc67926c2275837143485407a57cf4c3fda52d199cbb58f73d57a6988f9c
 DIST usbredir-0.5.1.tar.bz2 305067 SHA256 e0ce8b9503d463f9077310e8d0d00cd50e8972f4814dc4643f652506d4a9129b SHA512 b9aaced69716b673fb8ed41679c234a0c0453935694bfec2209cb6924ed88efebd9c9be7dffb516cf3d7848c7e5a99623062fe236e9056285b9876701718d033 WHIRLPOOL 495da31fe25f77b868b489b5598518adff2b6aae6824ad3db68266f3262ed690ec86925666013e1a679386be78cefec548dc772948ca760fa176041c912e0cd2
 DIST usbredir-0.5.tar.bz2 303095 SHA256 3f855dd70b3af0e8fd8ab7ab6b7e45f51bd4a28b4ef606e8349b7b2188edb201 SHA512 326f02bc7b29dacd61f7acdd8c76dd61d0294d47f164bf4f8241bc04ba5da5280ab4ebc0e413d3b4f482db0fb7159486d30beae2fcd4434676ad85045ac3f461 WHIRLPOOL 2fc79c541990419e42803f91db2dc62bc3161c798b27ac3a1d2923ed749af52dbd51cf3454d74f6665b468862d8580e34a4f2bc8877a1fedeebb9b501f62edea
+DIST usbredir-0.6.tar.bz2 305887 SHA256 028184960044ea4124030000b3c55a35c3238835116e3a0fbcaff449df2c8edf SHA512 2c5b6ea2580ab983b8087d0c7c0bf9dffb7ebff84928c01fec3bf44a08fc530db7719f0b33953e486fdc11763123a3eb9349a79b0241269ad9e6b16c6ef5bb9f WHIRLPOOL 1a67aaaf5baa1a3fb2e67667451262d3b1337a0163977c2157ad08d505ab1e5995771629005506a4ea463bc7743c69a3f28185b64475dd5c0d80f96b305f4242
 EBUILD usbredir-0.4.3.ebuild 807 SHA256 94da307652ac7a413350e11832df91ae6a202c5ce9cd1769968d33a1fee257dd SHA512 43a228fe183c332f27c4393edc72f8ce064afff2f2bc1ff046c4efc62833ecadcdecd5309b33329d751b1b977764e0cd615e87b71235f6cee318732dddbe82f2 WHIRLPOOL 7666a8a9c39f16ca7a0a663a8c802c184364d71b04146b72c604e7fd3ecf408e8b62a561b3306031bf5454a913bae15c3c5db6d2487abaf4329c1aeb425f458d
 EBUILD usbredir-0.5.1.ebuild 913 SHA256 fd560360bb9ad64ca374d9e1b49305c8df33fe33e8ac5b505d9ef3070b181cc8 SHA512 5d1649248f74458fb25dc48cfb353ce83821cb4dbc0d2867e7388cc74c69c3fce7cba3b64d56a469744ed8b7494a855933f5985868c7c7c26afa6441c9c4ab44 WHIRLPOOL fdbdb150c2c75965b4cbcd0069537992b8e3422dd4ec629d15b03843221acdb53a14b80cebb6285a12ec4fdc2a8e3e62b0efb8ac98d983c9fe223839e5895261
 EBUILD usbredir-0.5.ebuild 911 SHA256 f503c47179dc4811c134c6413200ff4219cbbe0a502561084aa682ba36a1e7e1 SHA512 3c78576130843cb05715fda09fe05e2f37e425d33a88182b23f78161cb732c5ee08a00dde58d436d9ffc59b605f254dd9108acf14d1b73b31c2d7e50dc0789d5 WHIRLPOOL b52d04409b727279099e7bc519c58f27acd1ccdb758a7625ca4eba590505acf5e61328403778ebe0be4a5311e15a658e794bece42dea22d41873dac9556eb86a
-MISC ChangeLog 2614 SHA256 4d24639afa6ef91b0d731d5bfc72687808e014150758caedb3952cfd9d638513 SHA512 4e6e4ffab0d5f2a45e49f94a5214fcc8c37812924204f8b4534aa9ffaf1e00c6dcdecd29a61bdf61c65d8525cf40171b4e9d57460e80e109e5253d1d7995c947 WHIRLPOOL c79b0e819bd5b8768403b8927f825b5b4ec291941cd72a76c1e4c4c598361901a3b715f161c2123602e20b00f48bfa602d7be08be1ed68f29988445197f825be
+EBUILD usbredir-0.6.ebuild 911 SHA256 9cbec55b380f05eea6947774b7128dad820ce7903342494d3e36394447a889fe SHA512 d02297e201d7ed00a08b427074cec08a666c26932f85de82d570112770140364391858cd29a2e44c64b8aab1529ffd353366c6aa1b7b3359f9749db9d6b9e691 WHIRLPOOL aeb228dc81c2b0f7aab16a74b8c5736444af7a4403c52b7917975ea24fffb55e54526c3816291756fe0c24f6c3c9a43e5a04acf15e36ccb6bbf374c2df0e3432
+MISC ChangeLog 2736 SHA256 08a606f7c23b66f5b5f43cfcdd53c3f5fc015b982a3df80c06ee94ff4b4873e1 SHA512 7edb56601c5438eb941ff5463794e26bd89425801ba79f1182b0a1a1dfcc18f22c6f1b9df29e72df85f2b16d3db6cd62142afa6c9a8d44746744255ad9aff373 WHIRLPOOL 90a8b8f6218d4681686a5816718f61cab3c21443b71341baf416ebb616db478347608ff0a8175ee629d479a37f779edea96c47d9ae12191bb2cd040ec113b6cc
 MISC metadata.xml 182 SHA256 f1459723f6edbdb3e6997bdf6619036b42297687e8667c11e068d9426854c8ec SHA512 a9409a5434e90c5cf61d90aced85261c9dbc7b089a3c556a7949f36977f71c5a84880e28fadea885ad0780eaa82879a04991e1990e52bdc93d3f55a35d960ca8 WHIRLPOOL 90b0d24804d8ee977ae30ea865739624c4f43e920b96f18425fcfbe0708c1183f6c45b7de75cf7ebb55d02f8304971885fdb0d49502dadb224f8e9397fe8d4d5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQYZcJAAoJEEdUh39IaPFN/pMIAIqWGtDeVW5c5PdHE3A0avSY
-0je9gTd1Z7SSv0Q7da3vkDnTkNvMPkWKPLpPP9IjSB58v7RddOLHEFkAM5MkWGh8
-xsgSpS8zcZR9GbB0YZ0AJ+RMDc/6K/Hlg/djMVKdpVsWygY/ApBnL1IosZInUxhn
-FPAMujnJTIdLfeg+hkRMWQxP4EA+pQQYgxjaBDc05oCSoCh1OCT1nlT6SdNgomye
-OwPofYqeh90TqWcJwQTrBSkjNBcfsBGsjYjXRZCWM/fUd3iil/n1KTgHMnujyQDv
-juOEF1vBagqnAdNxLHE6YsuCM+UQC8qHYCZ74SC9uHnZmqYh97PEkR9U61Vks5A=
-=B5o1
+iQEcBAEBCAAGBQJQzvB1AAoJEEdUh39IaPFNaLkH/iEeEFpm3zOO4NK3Yq9qwFdW
+7aDvsAQBVeE/RYP2WyC8jizKWaCjBHPsydhXTfhyOtANtTPc6DEtffAX06+j3zOK
+UoZ/rSozkMP5tLpWa/uq2r4OXYIbJZK1TdVifSpcVLEVIcLMy6ypx68LJi0a62HS
+lEWbO06m3a9G7/gYXbcUjVLs2QR8S4hpT+eDEgu2TFK5OfZHRgm/Aj1EyHszYQw1
+c3dDCvmQyXd+VXYcOjwUHrWuQN5HwkrwTXoINb9QVGhKPxcF09Q1W0Coad3NrZHK
+17du9iECWM7qRrYZ160Za0rJYYRIN2UOrY743tIWpDCBRNggAAzy6TBhKplY0CI=
+=Aqcv
 -----END PGP SIGNATURE-----
