@@ -1,0 +1,36 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbredir/usbredir-0.6.ebuild,v 1.1 2012/12/17 10:14:12 ssuominen Exp $
+
+EAPI=5
+inherit eutils flag-o-matic
+
+DESCRIPTION="A simple TCP daemon and set of libraries for the usbredir protocol (redirecting USB traffic)"
+HOMEPAGE="http://spice-space.org/page/UsbRedir"
+SRC_URI="http://spice-space.org/download/${PN}/${P}.tar.bz2"
+
+LICENSE="GPL-2 LGPL-2.1"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE="static-libs"
+
+RDEPEND="virtual/libusb:1"
+DEPEND="${RDEPEND}
+	virtual/pkgconfig"
+
+DOCS="ChangeLog README* TODO *.txt"
+
+src_configure() {
+	# http://bugs.freedesktop.org/show_bug.cgi?id=54643
+	append-cflags -Wno-error
+
+	econf $(use_enable static-libs static)
+}
+
+src_install() {
+	default
+	prune_libtool_files
+
+	# noinst_PROGRAMS
+	dobin usbredirtestclient/usbredirtestclient
+}
