@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/usbredir
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbredir/ChangeLog,v 1.19 2012/09/25 11:38:12 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbredir/ChangeLog,v 1.20 2012/12/17 10:14:12 ssuominen Exp $
+
+*usbredir-0.6 (17 Dec 2012)
+
+  17 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> +usbredir-0.6.ebuild:
+  Version bump.
 
 *usbredir-0.5.1 (25 Sep 2012)
 
